<resources>
    <string name="app_name">Sudoku Solver</string>
    <string name="action_settings">Settings</string>
    <string name="action_undo">Undo</string>
    <string name="action_random">random</string>
    <string name="animation_speed">Animation Speed</string>
    <string name="animation">Animation</string>
    <string name="animation_on">ON</string>
    <string name="animation_off">OFF</string>
    <string name="difficulty">Difficulty</string>
    <string name="solve">SOLVE</string>
    <string name="clear">CLEAR</string>
    <string name="erase">ERASE</string>
    <string name="tv_initial_anim_speed">75 ms</string>

    <string name="puzzle_solved_message">Whoa!, Puzzle Solved.</string>
    <string name="puzzle_unsolved_message">The Puzzle is NOT Solvable.</string>

    <string-array name="difficulties">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

</resources>